inicio conexiones con bd

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <a href="views/registro.html">Registrarse</a>
     <a href="views/menu.html">Menu</a>
     <a href="views/contacto.html">Contactos</a>
+    <a href="views/admenu.html">admin</a>
   </nav>
 
   <main class="info-container">
