--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,7 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Inicio - Restaurante 2 Ríos</title>
   <link rel="stylesheet" href="/css/estilos.css" />
-  <style>
-    /* Puedes agregar estilos rápidos aquí si los requieres */
-  </style>
+
 </head>
 <br>
 <body style="background: #D35400;">
@@ -24,7 +22,9 @@
     <a href="../views/registro.html">Registrarse</a>
     <a href="../views/menu.html">Menú</a>
     <a href="../views/contacto.html">Contacto</a>
-    <a href="../views/admin.html">Panel Admin</a>
+    <a href="../views/dashboard.html">Panel </a>
+    
+    
   </nav>
 
   <main class="info-container">
